# tenplates

./: Cargo.toml  README.md
tenplates/: Cargo.toml
tenplates-core/: Cargo.toml
tenplates-core/example/: page.tenplate  template.tenplate
tenplates-core/resources/: compile-other.tenplate  compile-page.tenplate  extended.txt  parse-include-1.txt
tenplates-core/resources/assert_not_eq_1/: test.tenplate
tenplates-core/resources/call_compile_chain_1/: call_1.tenplate  compile_1.tenplate  compile_2.tenplate  page.tenplate
tenplates-core/resources/parse_call_1/: call.tenplate  page.tenplate
tenplates-core/resources/parse_complex_1/: page.tenplate
tenplates-core/resources/parse_complex_2/: header.tenplate  page.tenplate
tenplates-core/resources/parse_complex_3/: page.tenplate
tenplates-core/resources/parse_complex_4/: page.tenplate
tenplates-core/resources/parse_complex_5/: base.tenplate
tenplates-core/resources/parse_complex_6/: against.txt  allsiblings.tenplate  sibling.tenplate
tenplates-core/resources/parse_file_1/: page.tenplate
tenplates-core/resources/parse_function_1/: function.tenplate  page.tenplate
tenplates-core/resources/parse_function_2/: page.tenplate
tenplates-core/resources/parse_function_3/: test.tenplate
tenplates-core/resources/parse_include_2/: base.tenplate  item.tenplate
tenplates-core/resources/parse_path_1/: page.tenplate
tenplates-core/src/: lib.rs
tenplates-serve/: Cargo.toml
tenplates-serve/resources/: help.txt
tenplates-serve/src/: main.rs
tenplates/resources/: help.txt
tenplates/src/: main.rs
(+20 files in other folders)
